SERVER-45119 Fix CollectionShardingState::getCurrentShardVersionIfKnown to actually return the shard version